# source-code

./: .gitignore  README.md  requirements.txt
MNIST-FL/: .gitignore  FL_report_visualization.ipynb  MLBaselineDomain.ipynb  MLBaselineTask.ipynb  MNISTdatasetShift.ipynb  MNISTdatasetShiftAutoEncoder.ipynb  README.md  get_data.py  pyproject.toml  run_pt_sims.py
MNIST-FL/experiment3ERAGEM/: FedIL.py  __init__.py  client_app.py  fisher.py  gradient_computers.py  server_app.py  task.py
MNIST-FL/paramTuning/: flwr_stuff.py  pt.py  report.py  typing.py
TMJ-FL/: .gitignore  README.md  experiment.py  preprocess_data.py  pyproject.toml
TMJ-FL/common/: MLP.py  XGB.py  binary_classification.py  config.py  data.py  dental_data.py  fisher.py  incremental.py  partitioner.py  report.py  save_model.py
TMJ-FL/dental_data/: Pipelines.py
TMJ-FL/fl_parameter_tuning/: flwr_stuff.py  pt.py
TMJ-FL/mlp_dental/: client_app.py  server_app.py
TMJ-FL/mlp_il_dental/: client_app.py  server_app.py
TMJ-FL/xgb_dental/: client_app.py  server_app.py
TMJ-FL/xgb_il_dental/: client_app.py  server_app.py
TMJ-ML/: __main__.py  get_data.py  mlp_dental.ipynb  res_visualisation.ipynb  xgb_dental.ipynb
TMJ-ML/mlp/: get_dataloaders.py  mlp_architectures.py  mlp_training.py
TMJ-ML/xgb/: get_dmatrices.py  xgb_training.py
notebooks/: FL_report_visualization.ipynb  exp1_results.ipynb  exp2_results.ipynb  report.py
